--- a/side-menu.html
+++ b/side-menu.html
@@ -7,6 +7,7 @@
 <title>Side Menu</title>
 </head>
 <body>
+<div class="sidemenu">
 	<nav class="sidenav">
 		<ul class="nobullets">
 			<li class ="sidenav-item" >
@@ -17,5 +18,6 @@
 			<li class ="sidenav-item" ><i class="fas fa-edit"></i><a href="add-content.jsp">Form Content</a></li>
 		</ul>
 	</nav>
+</div>
 </body>
 </html>
